--- a/dag1/05-typography.css
+++ b/dag1/05-typography.css
@@ -1,17 +1,6 @@
-/**
- * This part should cover:
- * - font-family
- * - font-size
- * - font-style
- * - font-weight
- * - letter-spacing
- * - line-height
- * - text-align
- * - text-decoration
- * - text-transform
- */
+/*
 body {
-  font-family: 'Comic Sans';
+  font-family: 'Comic Sans MS';
 }
 
 h1 {
@@ -27,3 +16,15 @@ h2 {
 h3 {
   text-align: right;
 }
+*/
+/*
+ * - font-family
+ * - font-size
+ * - font-style
+ * - font-weight
+ * - letter-spacing
+ * - line-height
+ * - text-align
+ * - text-decoration
+ * - text-transform
+ */
