--- a/dag2/01-layout/styles-1.css
+++ b/dag2/01-layout/styles-1.css
@@ -1,11 +1,12 @@
-/**
- * This part should cover:
+/*
+ * We gaan het hebben over:
  * - display (inline, block)
  * - width
  * - height
  * - margin
  * - padding
- * - transform
+ *
+ * Maar eerst: de CSS class
  */
 div {
   display: block;
