--- a/dag2/03-animation/styles.css
+++ b/dag2/03-animation/styles.css
@@ -1,7 +1,8 @@
-/**
- * This part should cover:
+/*
+ * We gaan het hebben over:
  * - transition
  * - animation
+ * - transform
  */
 div {
   display: block;
