--- a/dag3/01-tetris/styles.css
+++ b/dag3/01-tetris/styles.css
@@ -1,10 +1,12 @@
 .box {
-  width: 100px;
+  width: 300px;
   height: 100px;
   background: #f00;
   position: absolute;
   top: 0;
   left: 0;
+  border-radius: 10px;
+  transition: transform 0.2s;
 }
 
 body {
