Eindopdracht + Foto uploader.

--- a/eindopdracht/style.css
+++ b/eindopdracht/style.css
@@ -6,3 +6,13 @@ body {
   margin: 0;
   font-family: sans-serif;
 }
+
+.foto-container {
+  padding: 20px;
+}
+
+img {
+  max-width: 100%;
+  vertical-align: top;
+  margin-bottom: 20px;
+}
